# CHORwerk

./: CMakeLists.txt  DSP_ANALYSIS.md  README.md  gitignore
.github/workflows/: build.yml
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ChorusEngine.cpp  ChorusEngine.h  DelayLine.h  EnvelopeFollower.h  LFO.h  StateVariableFilter.h  StepSequencer.h  TempoSync.h  VoiceState.h
Source/Presets/: FactoryPresets.xml  PresetManager.cpp  PresetManager.h
Source/UI/: KnobComponent.h  LookAndFeel.cpp  LookAndFeel.h  PresetBrowser.h  SectionComponent.h  StepSequencerComponent.h  WaveformDisplay.h
comp/: charsiesis.txt
comp/charsiesis skins/: default.oms
